# santa-hackaton

./: .gitignore  pyproject.toml
stage_1/: main.py  map.json  video.py
stage_2/: main.py
stage_3/: main.py  map_sorted.json
