[tool.poetry]
name = "santa-hackaton"
version = "0.1.0"
description = ""
authors = ["Nick-Omen <nikita.omen666@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
